src/assets/styles/pages/services.scss
.services{
    &__container{
        margin: auto 10%;
    }

    &__grid{
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-gap: 10px;
        margin: 40px auto;

        @media (max-width: 991px){
        }

        @media (max-width: 767px){
            grid-template-columns: 1fr;
            justify-items:center;
        }

        &--item{
            position: relative;
            img{
                position: relative;
                width: 80%;
                height: 80%;
            }
        }

        &.grid--one{
            @media (max-width: 991px){
                
            }
            
            .services__grid--item{
                @media (max-width: 991px){
                    display: flex;
                    flex-direction: column;
                    align-items: center;
                }
               
                &:last-child{
                    display: grid;
                    place-content: center;
                    margin: auto 10%;
                }
            }
        }

        &.grid--two{
            border: 1px solid #707070;
            padding: 10px;
            .services__grid--item{
                @media (max-width: 991px){
                    display: flex;
                    flex-direction: column;
                    align-items: center;
                }
                &:first-child{
                    display: grid;
                    place-content: center;
                    margin: auto 10%;
                }
               
            }
        }
    }
}

